[metadata]
name = traefik-validator
version = 0.1.1
description = validate_traefik command for validating user traefik config file.
long_description = file:README.rst
url = https://github.com/aminiun/traefik-validator
license = BSD-3-Clause
author = Amin Aminian
author_email = a.aminian321@gmail.com
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0